--- a/src/pages/OurStories/OurStories.module.css
+++ b/src/pages/OurStories/OurStories.module.css
@@ -65,3 +65,27 @@
     flex-direction: column;
     gap: 0.5rem;
 }
+
+.moreStories {
+    letter-spacing: 0.8px;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 700;
+    align-self: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 calc(6rem / 2);
+    user-select: none;
+
+    &::after {
+        display: block;
+        content: '';
+        width: calc(100% + 6rem);
+        height: 4px;
+        border-radius: 10px;
+        background-color: #992b5a;
+    }
+}
