--- a/src/pages/ClientFeedback/ClientFeedback.module.css
+++ b/src/pages/ClientFeedback/ClientFeedback.module.css
@@ -19,7 +19,7 @@
 
     @media (max-width: 768px) {
         flex-direction: column;
-        margin-left: 1rem;
+        margin-left: var(--site-content-1-half-margin);
     }
 }
 
@@ -46,7 +46,7 @@
     > p {
         font-size: 1.5rem;
         line-height: 2.2rem;
-        color: theme(colors.black.text);
+        color: #100c08;
         cursor: pointer;
         user-select: none;
         padding: 1rem 2rem 1rem 0;
@@ -56,7 +56,7 @@
 
     .active {
         opacity: 1;
-        border-right: 1px solid theme(colors.black.selected);
+        border-right: 1px solid #202124;
     }
 
     @media (max-width: 625px) {
@@ -69,7 +69,7 @@
         }
 
         .active {
-            border-bottom: 1px solid theme(colors.black.selected);
+            border-bottom: 1px solid #202124;
         }
     }
 }
@@ -83,7 +83,7 @@
     max-width: 750px;
 
     > p {
-        color: theme(colors.black.text);
+        color:#100c08;
         font-weight: 500;
         font-size: 2.4rem;
         line-height: 2.8rem;
