--- a/src/pages/Advantages/Advantages.module.css
+++ b/src/pages/Advantages/Advantages.module.css
@@ -7,6 +7,11 @@
     width: 75%;
     margin: 20rem auto;
 
+    @media (max-width: 768px) {
+        width: var(--site-content-1-width);
+        margin: 6rem auto;
+      }
+
     > p {
         position: absolute;
         width: 100%;
@@ -15,9 +20,22 @@
         justify-content: center;
         text-align: center;
 
+        @media (max-width: 1200px) {
+            position: static;
+            margin-bottom: 5rem;
+        }
+      
+        @media (max-width: 768px) {
+            margin-bottom: -3rem;
+        }
+
         > span {
             position: relative;
             z-index: 1;
+
+            @media (max-width: 768px) {
+                z-index: unset;
+            }
         }
     }
 }
@@ -32,6 +50,11 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+
+    @media (max-width: 768px) {
+        position: static;
+        width: 100%;
+    }
 
     > :first-child {
         margin-bottom: 4rem;
@@ -63,6 +86,10 @@
         height: 100%;
         object-fit: cover;
         border-radius: inherit;
+
+        @media (max-width: 768px) {
+            aspect-ratio: 1 / 1;
+        }
     }
 
     > p {
