--- a/src/pages/Services/Services.module.css
+++ b/src/pages/Services/Services.module.css
@@ -7,6 +7,11 @@
     display: flex;
     flex-direction: column;
     gap: 4.5rem;
+
+    @media (max-width: 768px) {
+        padding: 6rem 1.5rem 3rem 1.5rem;
+        border-radius: 10px;
+    }
 }
 
 .services {
@@ -17,10 +22,24 @@
 .service {
     display: grid;
     grid-template-columns: auto 2fr 4fr auto;
-    column-gap: 6rem;
+    grid-column-gap: 6rem;
     padding: 2.4rem 0;
     border-top: 1px solid #c4c4c4;
     cursor: pointer;
+
+    @media (max-width: 1000px) {
+        grid-template-columns: 1fr;
+        justify-items: center;
+
+        > :nth-child(2) {
+            order: 1;
+            margin: 2rem 0;
+        }
+
+        > :last-child {
+            order: 2;
+        }
+    }
 
     &.hovered {
         > p {
@@ -43,7 +62,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 3.5rem;
+    gap: 4.5rem;
 }
 
 .writeStory {
@@ -64,7 +83,7 @@
       height: 100%;
       width: max(85px, 28%);
       border-radius: 10px;
-      background-color: theme(colors.yellow.base);
+      background-color: #ebc414;
       z-index: -1;
     }
   }
