--- a/src/pages/Testmonial/Testimonial.module.css
+++ b/src/pages/Testmonial/Testimonial.module.css
@@ -5,11 +5,20 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+
+    @media (max-width: 600px) {
+        padding-left: 0;
+        width: var(--site-content-1-width);
+    }
 }
 
 .footer {
     display: flex;
     gap: 2rem;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+    }
 }
 
 .author {
