--- a/src/pages/BuildingProcess/BuildingProcess.module.css
+++ b/src/pages/BuildingProcess/BuildingProcess.module.css
@@ -76,3 +76,27 @@
 .slide.active {
     opacity: 1;
 }
+
+.quote {
+    width: var(--site-content-2-width);
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 0 14rem;
+
+    > div:nth-child(2) {
+        width: 352px;
+        position: absolute;
+        top: 5rem;
+        right: 5rem;
+        transform: translateX(-50%);
+    
+        @media (max-width: 1100px) {
+          position: static;
+          transform: unset;
+          align-self: flex-end;
+          width: 45vw;
+        }
+    }
+}
